added header tags

--- a/blog.html
+++ b/blog.html
@@ -8,25 +8,31 @@
     <title>Benjamin Babu</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark-subtle" style="background-color: gray;" data-bs-theme="dark">
-        <a class="navbar-brand mx-auto" href="index.html">
-            <img src="images/homeicon.png" width="5%" height="5%">
-        </a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark-subtle" style="background-color: gray;" data-bs-theme="dark">
+            <a class="navbar-brand mx-auto" href="index.html">
+                <img src="images/homeicon.png" width="5%" height="5%">
+            </a>
 
-        <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="aboutme.html">About Me</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="photography.html">Photography</a>
-            </li>
-        </ul>
-    </nav>
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutme.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="blog.html">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="photography.html">Photography</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        
+    </main>
 </body>
 </html>
