--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark-subtle" style="background-color: gray;" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-dark-subtle" aria-label="navbar" style="background-color: gray;" data-bs-theme="dark">
             <a class="navbar-brand mx-auto" href="index.html">
                 <img src="images/homeicon.png" width="5%" height="5%">
             </a>
@@ -32,7 +32,45 @@
     </header>
 
     <main>
-        
+        <section class="bento-grid">
+            <article class="bento-item">
+                <article class="bento-content">
+                    <h1>Benjamin Babu</h1>
+                    <img src="pfp" alt="">
+                    <p>paragraph 1</p>
+                </article>
+            </article>
+            <article class="bento-item">
+                <article class="bento-content">
+                    <h3>title 2</h3>
+                    <p>paragraph 2</p>
+                </article>
+            </article>
+            <article class="bento-item">
+                <article class="bento-content">
+                    <h3>title 3</h3>
+                    <p>paragraph 3</p>
+                </article>
+            </article>
+            <article class="bento-item">
+                <article class="bento-content">
+                    <h3>LinkedIn</h3>
+                    <p>paragraph 4</p>
+                </article>
+            </article>
+            <article class="bento-item">
+                <article class="bento-content">
+                    <h3>title 5</h3>
+                    <p>paragraph 5</p>
+                </article>
+            </article>
+            <article class="bento-item">
+                <article class="bento-content">
+                    <h3>GitHub</h3>
+                    <p>paragraph 6</p>
+                </article>
+            </article>
+        </section>
     </main>
 </body>
 </html>
