--- a/index.html
+++ b/index.html
@@ -31,42 +31,45 @@
         </nav>
     </header>
 
-    <main>
+    <main class="container py-4">
         <section class="bento-grid">
             <article class="bento-item">
                 <article class="bento-content">
+                    <p>Hi! My name is</p>
                     <h1>Benjamin Babu</h1>
-                    <img src="pfp" alt="">
-                    <p>paragraph 1</p>
+                    <img src="images/pfp.jpg" alt="a picture of moi" class="bento-img">
+                    
                 </article>
             </article>
-            <article class="bento-item">
+            <!-- <article class="bento-item">
                 <article class="bento-content">
                     <h3>title 2</h3>
                     <p>paragraph 2</p>
                 </article>
-            </article>
+            </article> -->
             <article class="bento-item">
                 <article class="bento-content">
-                    <h3>title 3</h3>
-                    <p>paragraph 3</p>
+                    <h3>Me talking about me</h3>
+                    <!-- <p>paragraph 3</p> -->
                 </article>
             </article>
             <article class="bento-item">
                 <article class="bento-content">
-                    <h3>LinkedIn</h3>
-                    <p>paragraph 4</p>
-                </article>
-            </article>
-            <article class="bento-item">
-                <article class="bento-content">
-                    <h3>title 5</h3>
+                    <h3>My hot takes</h3>
                     <p>paragraph 5</p>
                 </article>
             </article>
             <article class="bento-item">
                 <article class="bento-content">
-                    <h3>GitHub</h3>
+                    <h3>Check out my socials</h3>
+                    <p>github</p>
+                    <p>linkedin</p>
+                    <p></p>
+                </article>
+            </article>
+            <article class="bento-item">
+                <article class="bento-content">
+                    <h3>Just some pictures I happened to take :)</h3>
                     <p>paragraph 6</p>
                 </article>
             </article>
