--- a/blog.html
+++ b/blog.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="common_style.css">
-    <title>Benjamin Babu</title>
+    <title>Benjamin Babu | Blog</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark-subtle" style="background-color: gray;" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-dark-subtle" aria-label="navbar" data-bs-theme="bg-light">
             <a class="navbar-brand mx-auto" href="index.html">
                 <img src="images/homeicon.png" width="5%" height="5%">
             </a>
 
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link"href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="blog.html">Blog</a>
+                    <a class="nav-link active" aria-current="page" href="blog.html" style="font-weight: 600;">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="photography.html">Photography</a>
@@ -31,8 +31,20 @@
         </nav>
     </header>
 
-    <main>
-        
+    <main class="container py-4">
+        <div id="card" style="width: 18rem;">
+            <picture>
+                <img src="images/cam.jpg" alt="rearview mirror dslr selfie" style="width: 100%; height: 100%">
+            </picture>
+            <div class="card-body">
+                <h6>A Moment Through the Lens <span class="badge text-bg-primary">New</span></h6>
+                <p class="card-text">
+                    Photography has always been my way of slowing life down, one frame at a time. I love chasing small
+                    details most people walk past, from light hitting glass to quiet corners of a city. Every photo
+                    here is a reminder that beauty usually hides in the ordinary.
+                </p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
