--- a/photography.html
+++ b/photography.html
@@ -6,17 +6,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="common_style.css">
     <title>Benjamin Babu</title>
+    <style>
+        #card:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark-subtle" style="background-color: gray;" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-dark-subtle" aria-label="navbar" data-bs-theme="bg-light">
             <a class="navbar-brand mx-auto" href="index.html">
                 <img src="images/homeicon.png" width="5%" height="5%">
             </a>
 
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link"href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">About Me</a>
@@ -25,14 +30,24 @@
                     <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="photography.html">Photography</a>
+                    <a class="nav-link active" aria-current="page" ref="photography.html" style="font-weight: 600;">Photography</a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        
+    <main class="container py-4">
+        <a href="https://www.instagram.com/bensframed/" class="btn btn-primary" target="_blank">Check out my photography page</a>
+        <section class="gallery">
+            <img src="images/p1.jpg" alt="Photo 1">
+            <img src="images/p2.jpg" alt="Photo 2">
+            <img src="images/p3.jpg" alt="Photo 3">
+            <img src="images/p4.jpg" alt="Photo 4">
+            <img src="images/p5.jpg" alt="Photo 5">
+            <img src="images/p6.jpg" alt="Photo 6">
+            <img src="images/p7.jpg" alt="Photo 7">
+            <img src="images/p8.jpeg" alt="Photo 8">
+        </section>
     </main>
 </body>
 </html>
