fixing image naming

--- a/photography.html
+++ b/photography.html
@@ -40,13 +40,13 @@
         <a href="https://www.instagram.com/bensframed/" class="btn btn-primary" target="_blank">Check out my photography page</a>
         <section class="gallery">
             <img src="images/p1.jpg" alt="Photo 1">
-            <img src="images/p2.jpg" alt="Photo 2">
-            <img src="images/p3.jpg" alt="Photo 3">
-            <img src="images/p4.jpg" alt="Photo 4">
-            <img src="images/p5.jpg" alt="Photo 5">
-            <img src="images/p6.jpg" alt="Photo 6">
-            <img src="images/p7.jpg" alt="Photo 7">
-            <img src="images/p8.jpeg" alt="Photo 8">
+            <img src="images/p2.JPG" alt="Photo 2">
+            <img src="images/p3.JPG" alt="Photo 3">
+            <img src="images/p4.JPG" alt="Photo 4">
+            <img src="images/p5.JPG" alt="Photo 5">
+            <img src="images/p6.JPG" alt="Photo 6">
+            <img src="images/p7.JPG" alt="Photo 7">
+            <img src="images/p8.JPEG" alt="Photo 8">
         </section>
     </main>
 </body>
