--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-dark-subtle" aria-label="navbar" data-bs-theme="bg-light">
             <a class="navbar-brand mx-auto" href="index.html">
-                <img src="images/homeicon.png" width="5%" height="5%">
+                <img src="images/homeicon.png" alt="logo" width="5%" height="5%">
             </a>
 
             <ul class="navbar-nav mx-auto">
